--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@
       sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    background-image: url('/background.jpg');
+    background-image: url('./assets/background.jpg');
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
